Symfony2 setup for apache2 WIP

--- a/templates/default/apache2/app.conf.erb
+++ b/templates/default/apache2/app.conf.erb
@@ -3,6 +3,8 @@
     ServerAdmin <%= node['apache']['contact'] %>
 
     DocumentRoot /vagrant/web
+    DirectoryIndex app_dev.php
+
     <Directory />
         Options FollowSymLinks
         AllowOverride None
