--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
+        <link href="{{ asset('assets/css/style.css') }}" rel="stylesheet" type="text/css"/>
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link href="{{  asset('assets/css/style.css') }}" rel="stylesheet" type="text/css"/>
+        {% block head %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}{%  endblock %}
+        <script type="text/javascript" src="{{ asset('assets/js/main.js') }}"></script>
     </body>
 </html>
