--- a/src/App/DefaultBundle/Resources/views/layout.html.twig
+++ b/src/App/DefaultBundle/Resources/views/layout.html.twig
@@ -1,7 +1,7 @@
 {% extends "::base.html.twig" %}
 
 {% block head %}
-    <link rel="icon" sizes="16x16" href="{{ asset('favicon.ico') }}" />
+    <link rel="icon" sizes="16x16" href="{{ asset('favicon.ico') }}"/>
 {% endblock %}
 
 {% block title 'DefaultBundle' %}
@@ -13,17 +13,29 @@
         </div>
     {% endfor %}
 
-    {% block content_header %}
-        <ul id="menu">
-            {% block content_header_more %}
-                <li><a href="{{ path('_demo') }}">Demo Home</a></li>
-            {% endblock %}
-        </ul>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">nickphillips.co</a>
+            </div>
+        </div>
+    </nav>
 
-        <div style="clear: both"></div>
-    {% endblock %}
+    {% block content %}{% endblock %}
 
-    <div class="block">
-        {% block content %}{% endblock %}
+    <div class="container">
+        <div class="row">
+            <hr>
+
+            <footer>
+                <p>&copy; Nick Phillips {{ 'now'|date('Y') }}</p>
+            </footer>
+        </div>
     </div>
 {% endblock %}
