Styling for flash messages with bootstrap resolves #54

--- a/src/App/DefaultBundle/Resources/views/layout.html.twig
+++ b/src/App/DefaultBundle/Resources/views/layout.html.twig
@@ -7,11 +7,7 @@
 {% block title 'DefaultBundle' %}
 
 {% block body %}
-    {% for flashMessage in app.session.flashbag.get('notice') %}
-        <div class="flash-message">
-            <em>Notice</em>: {{ flashMessage }}
-        </div>
-    {% endfor %}
+    {% include 'AppDefaultBundle::_flashbag.html.twig' %}
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
