--- a/src/App/DefaultBundle/Resources/views/Default/index.html.twig
+++ b/src/App/DefaultBundle/Resources/views/Default/index.html.twig
@@ -5,38 +5,42 @@
 {% block content_header '' %}
 
 {% block content %}
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Hello {{ name }}</h1>
+    <div ng-controller="AppDefaultCtrl">
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Hello {{ name }}</h1>
 
-            <p>This is a huge work in progress currently ;)</p>
+                <p>This is a huge work in progress currently ;)</p>
+
+                <a ng-click="testButton()" class="btn btn-success">Create an alert</a>
+            </div>
         </div>
-    </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h2>Heading</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Heading</h2>
 
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
 
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div>
 
-            <div class="col-md-4">
-                <h2>Heading</h2>
+                <div class="col-md-4">
+                    <h2>Heading</h2>
 
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
 
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div>
 
-            <div class="col-md-4">
-                <h2>Heading</h2>
+                <div class="col-md-4">
+                    <h2>Heading</h2>
 
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div>
             </div>
         </div>
     </div>
