--- a/src/App/DefaultBundle/Resources/public/less/main.less
+++ b/src/App/DefaultBundle/Resources/public/less/main.less
@@ -1,4 +1,10 @@
 body {
   padding-top: 50px;
-  padding-bottom: 20px;
+  padding-bottom: 100px;
+}
+
+.footer {
+  min-height: 100px;
+  padding-top: 20px;
+  background-color: red;
 }
