--- a/src/App/DefaultBundle/Resources/views/layout.html.twig
+++ b/src/App/DefaultBundle/Resources/views/layout.html.twig
@@ -12,7 +12,8 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -25,13 +26,22 @@
 
     {% block content %}{% endblock %}
 
-    <div class="container">
-        <div class="row">
-            <hr>
+    <footer class="navbar navbar-fixed-bottom footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3" ng-controller="App"></div>
+            </div>
 
-            <footer>
-                <p>&copy; Nick Phillips {{ 'now'|date('Y') }}</p>
-            </footer>
+            <div class="row">
+                <div class="col-md-6">
+                    <p>&copy; Nick Phillips {{ 'now'|date('Y') }}</p>
+                </div>
+
+                <div class="col-md-6 pull-right">
+                    Github?
+                </div>
+            </div>
         </div>
-    </div>
+
+    </footer>
 {% endblock %}
