--- a/src/App/DefaultBundle/Resources/views/layout.html.twig
+++ b/src/App/DefaultBundle/Resources/views/layout.html.twig
@@ -29,7 +29,7 @@
     <footer class="navbar navbar-fixed-bottom footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-3" ng-controller="AppDefaultTwitterCtrl"></div>
+                <div class="col-md-3" ng-controller="AppDefaultTwitterCtrl" ng-include src="'default/footer-twitter.html'"></div>
                 <div class="col-md-3"></div>
                 <div class="col-md-3"></div>
             </div>
