--- a/src/App/DefaultBundle/Resources/views/_flashbag.html.twig
+++ b/src/App/DefaultBundle/Resources/views/_flashbag.html.twig
@@ -14,6 +14,6 @@
             </div>
         {% endfor %}
     {% endfor %}
-</div>
 
-<div ng-include src="'test.html'"></div>
+    <div ng-include src="'assets/partials/AppDefaultBundle/flash-messenger.html'"></div>
+</div>
